# bazel-rulesjs-webpack-example

./: .gitignore  BUILD.bazel  WORKSPACE.bazel  package.json  pnpm-lock.yaml  webpack.config.js
